Added rank_pairs process. Cleaned up configuration files.

--- a/conf/unity.config
+++ b/conf/unity.config
@@ -1,6 +1,6 @@
 /*
     * -------------------------------------------------
-    *  Unity HPC cluster config file for nf-core
+    *  Unity HPC cluster config file
     * -------------------------------------------------
     * https://unity.rc.umass.edu/
     */
@@ -22,34 +22,12 @@ process {
     time: 14.d
   ]
   executor = 'slurm'
-  queueSize = 1000
+  queueSize = 500
   submitRateLimit = '20sec'
-  pollInterval = '30 sec'
-  queueStatInterval = '1 min'
+  pollInterval = '30sec'
+  queueStatInterval = '1min'
 
   // Selects partition based on process time
   queue = { task.time <= 2.h ? 'cpu-preempt' : 'cpu' }
   clusterOptions = { task.time >= 48.h ? '-q long' : '' }
-
-  withName: 'COLABFOLD_BATCH' {
-        // If a process has COLABFOLD_BATCH name submits to gpu queue
-        queue = { task.time <= 2.h ? 'gpu-preempt' : 'gpu' }
-        clusterOptions = { "--gpus=1" + " --constraint=${task.attempt == 1 ? 'vram23' : (task.attempt == 2 ? 'vram40' : 'vram80') }" }
-        containerOptions = '--nv'
-    }
-}
-
-
-// Cleans up work directory after successfull run
-cleanup = true
-// Profile debug can be used to prevent cleanup
-profiles {
-    unity {
-        apptainer {
-          enabled = true
-          autoMounts = true
-          pullTimeout = '120m'
-      }
-      cleanup = false
-    }
 }
