--- a/nextflow.config
+++ b/nextflow.config
@@ -19,8 +19,27 @@ env {
 // Capture exit codes from upstream processes when piping
 process.shell = ['/bin/bash', '-euo', 'pipefail']
 
-// Load base.config by default for all pipelines
+// Load configurations files
 includeConfig 'conf/base.config'
+includeConfig 'conf/modules.config'
+
+// Set Profile settings
+profiles {
+    unity {
+        apptainer {
+          enabled = true
+          autoMounts = true
+          pullTimeout = '120m'
+      }
+        cleanup = true
+        includeConfig 'conf/unity.config'
+    }
+    debug {
+        dumpHashes              = true
+        process.beforeScript    = 'echo $HOSTNAME'
+        cleanup                 = false
+    }
+}
 
 manifest {
     name            = 'baldikacti/chienlab-proteinfold'
