--- a/nextflow.config
+++ b/nextflow.config
@@ -4,9 +4,13 @@ params {
     // Input options
     input                       = null
     outdir                      = null
+    org_ref                     = null
     colabfold_model_preset      = null
     num_recycles_colabfold      = 3
     mode                        = 'colabfold' // {alphafold3, colabfold}
+
+    // Reports
+    colabfold_notebook    = "${launchDir}/modules/colabfold_report/colabfold_report.qmd"
 }
 
 env {
@@ -31,13 +35,8 @@ profiles {
           autoMounts = true
           pullTimeout = '120m'
       }
-        cleanup = true
+        cleanup = false
         includeConfig 'conf/unity.config'
-    }
-    debug {
-        dumpHashes              = true
-        process.beforeScript    = 'echo $HOSTNAME'
-        cleanup                 = false
     }
 }
 
