Adds new paramater . Adds CHANGELOG.md. Cleans up config to use the  profile from .

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,7 +1,7 @@
 // Module specific configurations
 process {
-  withName: 'COLABFOLD_BATCH' {
-        // If a process has COLABFOLD_BATCH name submits to gpu queue
+  withLabel: 'gpu' {
+        // If a process has gpu label submits to gpu queue
         queue = { task.time <= 2.h ? 'gpu-preempt' : 'gpu' }
         clusterOptions = { "--gpus=1" + " --constraint=${task.attempt == 1 ? 'vram23' : (task.attempt == 2 ? 'vram40' : 'vram80') }" }
         containerOptions = '--nv'
