--- a/nextflow.config
+++ b/nextflow.config
@@ -7,10 +7,17 @@ params {
     org_ref                     = null
     colabfold_model_preset      = null
     num_recycles_colabfold      = 3
+    top_rank                    = null
     mode                        = 'colabfold' // {alphafold3, colabfold}
 
-    // Reports
-    colabfold_notebook    = "${launchDir}/modules/colabfold_report/colabfold_report.qmd"
+    // Config options
+    config_profile_name        = null
+    config_profile_description = null
+    custom_config_version      = 'master'
+    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    config_profile_contact     = null
+    config_profile_url         = null
+
 }
 
 env {
@@ -27,17 +34,11 @@ process.shell = ['/bin/bash', '-euo', 'pipefail']
 includeConfig 'conf/base.config'
 includeConfig 'conf/modules.config'
 
-// Set Profile settings
-profiles {
-    unity {
-        apptainer {
-          enabled = true
-          autoMounts = true
-          pullTimeout = '120m'
-      }
-        cleanup = false
-        includeConfig 'conf/unity.config'
-    }
+// Load nf-core custom profiles from different Institutions
+try {
+    includeConfig "${params.custom_config_base}/nfcore_custom.config"
+} catch (Exception e) {
+    System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
 manifest {
