Slurm GPU resource optimization.

--- a/conf/base.config
+++ b/conf/base.config
@@ -37,6 +37,16 @@ process {
         memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
     }
+    withLabel:gpu {
+        // If a process has gpu label submits to gpu queue
+        queue = { task.time <= 2.h ? 'gpu-preempt' : 'gpu' }
+        clusterOptions = { "--gpus=1" + " --constraint=${task.attempt == 1 ? 'vram23' : (task.attempt == 2 ? 'vram40' : 'vram80') }" }
+        containerOptions = '--nv'
+
+        cpus   = { check_max( 1                   , 'cpus'    ) }
+        memory = { check_max( 36.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 8.h  * task.attempt , 'time'    ) }
+    }
     withLabel:process_long {
         time   = { check_max( 20.h  * task.attempt, 'time'    ) }
     }
