Adds ability to use fasta files. Relative path bug fix. New local profiles

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,1 +1,10 @@
 // Module specific configurations
+process {
+  withName: 'COLABFOLD_BATCH*' {
+                ext.args = { [
+                    '--templates',
+                    '--amber',
+                    '--use-gpu-relax',
+                ].join(' ').trim()}
+            }
+}
