Workflow accepts empty --org_ref argument. More paramaters exposed from colabfold_batch function. Remote executaion bug fixed

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -2,9 +2,10 @@
 process {
   withName: 'COLABFOLD_BATCH*' {
                 ext.args = { [
-                    '--templates',
-                    '--amber',
-                    '--use-gpu-relax',
+                    params.templates ? '--templates' : '',
+                    params.amber ? '--amber' : '',
+                    params.use_gpu_relax ? '--use-gpu-relax' : '',
+                    params.host_url ? "--host_url ${params.host_url}" : '',
                 ].join(' ').trim()}
             }
 }
