--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,12 @@ params {
     top_rank                    = null
     mode                        = 'colabfold' // {alphafold3, colabfold}
 
+    // colabfold_batch paramaters
+    use_gpu_relax               = true
+    templates                   = true
+    amber                       = true
+    host_url                    = null
+
     // Config options
     config_profile_name        = null
     config_profile_description = null
@@ -27,14 +33,15 @@ env {
     JULIA_DEPOT_PATH = "/usr/local/share/julia"
 }
 
-// Capture exit codes from upstream processes when piping
-process.shell = """\
-bash
-
-set -e # Exit if a tool returns a non-zero status/exit code
-set -u # Treat unset variables and parameters as an error
-set -o pipefail # Returns the status of the last command to exit with a non-zero status or zero if all successfully execute
-"""
+// Set bash options
+process.shell = [
+    "bash",
+    "-C",         // No clobber - prevent output redirection from overwriting files.
+    "-e",         // Exit if a tool returns a non-zero status/exit code
+    "-u",         // Treat unset variables and parameters as an error
+    "-o",         // Returns the status of the last command to exit..
+    "pipefail"    //   ..with a non-zero status or zero if all successfully execute
+]
 
 // Load configurations files
 includeConfig 'conf/base.config'
