--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,11 +1,11 @@
 // Module specific configurations
 process {
-  withName: 'COLABFOLD_BATCH*' {
+    withName: 'COLABFOLD_BATCH*' {
                 ext.args = { [
-                    params.templates ? '--templates' : '',
-                    params.amber ? '--amber' : '',
-                    params.use_gpu_relax ? '--use-gpu-relax' : '',
-                    params.host_url ? "--host_url ${params.host_url}" : '',
+                    '--templates',
+                    '--amber',
+                    '--use-gpu-relax',
+                    params.host_url ? "--host-url ${params.host_url}" : '',
                 ].join(' ').trim()}
             }
 }
