--- a/nextflow.config
+++ b/nextflow.config
@@ -5,15 +5,15 @@ params {
     input                       = null
     outdir                      = null
     org_ref                     = null
-    colabfold_model_preset      = null
-    num_recycles_colabfold      = 3
     top_rank                    = null
     mode                        = 'colabfold' // {alphafold3, colabfold}
 
     // colabfold_batch paramaters
-    use_gpu_relax               = true
-    templates                   = true
-    amber                       = true
+    colabfold_model_preset      = null
+    num_recycles_colabfold      = 3
+    //use_gpu_relax               = true
+    //templates                   = true
+    //amber                       = true
     host_url                    = null
 
     // Config options
@@ -87,6 +87,12 @@ profiles {
         shifter.enabled         = false
         charliecloud.enabled    = false
     }
+    debug {
+        clean = false
+        process {
+            errorStrategy = 'terminate'
+        }
+    }
 }
 
 manifest {
@@ -96,7 +102,7 @@ manifest {
     description     = """Protein 3D structure paired prediction pipeline"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.10.0'
-    version         = '0.1.0'
+    version         = '0.6.0'
 }
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
