Added alphafold3 mode. Added tsv2json.py converted for create Alphafold3 json files from the TSV input

--- a/conf/base.config
+++ b/conf/base.config
@@ -33,18 +33,29 @@ process {
         time   = { check_max( 8.h   * task.attempt, 'time'    ) }
     }
     withLabel:process_high {
-        cpus   = { check_max( 12    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 16.h  * task.attempt, 'time'    ) }
+        cpus   = { check_max( 10    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 100.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 8.h  * task.attempt, 'time'    ) }
     }
-    withLabel:gpu {
+    withLabel:gpu_colabfold {
         // If a process has gpu label submits to gpu queue
         queue = { task.time <= 2.h ? 'gpu-preempt' : 'gpu' }
         clusterOptions = { "--gpus=1" + " --constraint=${task.attempt == 1 ? 'vram23' : (task.attempt == 2 ? 'vram40' : 'vram80') }" }
         containerOptions = '--nv'
 
         cpus   = { check_max( 1                   , 'cpus'    ) }
-        memory = { check_max( 36.GB * task.attempt, 'memory'  ) }
+        memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 8.h  * task.attempt , 'time'    ) }
+    }
+    withLabel:gpu_af3 {
+        // If a process has gpu label submits to gpu queue
+        queue = { task.time <= 2.h ? 'gpu-preempt' : 'gpu' }
+        // Excludes RTX8000 GPUs because of compute capability < 8
+        clusterOptions = { "--gpus=1" + " --exclude=gypsum-gpu[182,186,188]" + " --constraint=${task.attempt == 1 ? 'vram48' : 'vram80' }" }
+        containerOptions = '--nv'
+
+        cpus   = { check_max( 1                   , 'cpus'    ) }
+        memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 8.h  * task.attempt , 'time'    ) }
     }
     withLabel:process_long {
