--- a/conf/modules.config
+++ b/conf/modules.config
@@ -8,4 +8,10 @@ process {
                     params.host_url ? "--host-url ${params.host_url}" : '',
                 ].join(' ').trim()}
             }
+    withName: 'AF3_FOLD' {
+                ext.args = { [
+                    "--max_template_date=${params.max_template_date}",
+                    "--num_recycles=${params.num_recycles}",
+                ].join(' ').trim()}
+            }
 }
