--- a/nextflow.config
+++ b/nextflow.config
@@ -3,10 +3,10 @@ params {
 
     // Input options
     input                       = null
-    outdir                      = null
+    outdir                      = './results'
     org_ref                     = null
     top_rank                    = null
-    mode                        = 'colabfold' // {alphafold3, colabfold}
+    mode                        = null // {alphafold3, colabfold}
 
     // colabfold_batch paramaters
     colabfold_model_preset      = null
@@ -16,13 +16,21 @@ params {
     //amber                       = true
     host_url                    = null
 
+    // Alphafold3 params
+    model_dir                   = null
+    db_dir                      = null
+    max_template_date           = '2021-09-30'
+    num_recycles                = 10
+    inf_batch                   = 20
+    
+
     // Config options
-    config_profile_name        = null
-    config_profile_description = null
-    custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_contact     = null
-    config_profile_url         = null
+    config_profile_name         = null
+    config_profile_description  = null
+    custom_config_version       = 'master'
+    custom_config_base          = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    config_profile_contact      = null
+    config_profile_url          = null
 
 }
 
