Updated output structure for AF3. Added AF3 dockerfile. Modified tsv2json.py to raise error if input FASTA files did not pass checks

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ params {
 
     // Alphafold3 params
     model_dir                   = null
-    db_dir                      = null
+    db_dir                      = '/datasets/bio/alphafold3'
     max_template_date           = '2021-09-30'
     num_recycles                = 10
     inf_batch                   = 20
