Makes all colabfold_batch paramaters exposed

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,12 +8,44 @@ params {
     mode                        = null // {alphafold3, colabfold}
 
     // colabfold_batch paramaters
-    colabfold_model_preset      = null
-    num_recycles_colabfold      = 3
-    //use_gpu_relax               = true
-    //templates                   = true
-    //amber                       = true
-    host_url                    = null
+    // MSA arguments
+    msa_mode = 'mmseqs2_uniref_env'
+    pair_mode = 'unpaired_paired'
+    pair_strategy = 'greedy'
+    templates = false
+
+    // Prediction arguments
+    num_recycle = 3
+    recycle_early_stop_tolerance = null
+    num_ensemble = null
+    num_seeds = null
+    random_seed = null
+    num_models = null
+    model_type = 'alphafold2_multimer_v3'
+    use_dropout = null
+    max_seq = null
+    max_extra_seq = null
+    max_msa = null
+    disable_cluster_profile = null
+
+    // Relaxation arguments
+    amber = null
+    num_relax = null
+    relax_max_iterations = null
+    relax_tolerance = null
+    relax_max_outer_iterations = null
+    use_gpu_relax = null
+
+    // Output arguments
+    rank = null
+    stop_at_score = null
+    save_all = null
+    save_recycles = null
+    save_single_representations = null
+    save_pair_representations = null
+
+    // Advanced arguments
+    host_url = 'http://cfold-db:8888'
 
     // Alphafold3 params
     model_dir                   = null
