--- a/conf/modules.config
+++ b/conf/modules.config
@@ -2,9 +2,33 @@
 process {
     withName: 'COLABFOLD_BATCH*' {
                 ext.args = { [
-                    '--templates',
-                    '--amber',
-                    '--use-gpu-relax',
+                    params.msa_mode ? "--msa-mode ${params.msa_mode}" : '',
+                    params.pair_mode ? "--pair-mode ${params.pair_mode}" : '',
+                    params.pair_strategy ? "--pair-strategy ${params.pair_strategy}" : '',
+                    params.templates ? '--templates' : '',
+                    params.recycle_early_stop_tolerance ? "--recycle-early-stop-tolerance ${params.recycle_early_stop_tolerance}" : '',
+                    params.num_ensemble ? "--num-ensemble ${params.num_ensemble}" : '',
+                    params.num_seeds ? "--num-seeds ${params.num_seeds}" : '',
+                    params.random_seed ? "--random-seed ${params.random_seed}" : '',
+                    params.num_models ? "--num-models ${params.num_models}" : '',
+                    params.model_type ? "--model-type ${params.model_type}" : '',
+                    params.use_dropout ? '--use-dropout' : '',
+                    params.max_seq ? "--max-seq ${params.max_seq}" : '',
+                    params.max_extra_seq ? "--max-extra-seq ${params.max_extra_seq}" : '',
+                    params.max_msa ? "--max-msa ${params.max_msa}" : '',
+                    params.disable_cluster_profile ? '--disable-cluster-profile' : '',
+                    params.amber ? '--amber' : '',
+                    params.num_relax ? "--num-relax ${params.num_relax}" : '',
+                    params.relax_max_iterations ? "--relax-max-iterations ${params.relax_max_iterations}" : '',
+                    params.relax_tolerance ? "--relax-tolerance ${params.relax_tolerance}" : '',
+                    params.relax_max_outer_iterations ? "--relax-max-outer-iterations ${params.relax_max_outer_iterations}" : '',
+                    params.use_gpu_relax ? '--use-gpu-relax' : '',
+                    params.rank ? "--rank ${params.rank}" : '',
+                    params.stop_at_score ? "--stop-at-score ${params.stop_at_score}" : '',
+                    params.save_all ? '--save-all' : '',
+                    params.save_recycles ? '--save-recycles' : '',
+                    params.save_single_representations ? '--save-single-representations' : '',
+                    params.save_pair_representations ? '--save-pair-representations' : '',
                     params.host_url ? "--host-url ${params.host_url}" : '',
                 ].join(' ').trim()}
             }
