Adds examples. Adjusts modules.config and nextflow.config to make all colabfold_batch and run+alphafold.py paramaters available to user. Updates README

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -2,40 +2,43 @@
 process {
     withName: 'COLABFOLD_BATCH*' {
                 ext.args = { [
-                    params.msa_mode ? "--msa-mode ${params.msa_mode}" : '',
-                    params.pair_mode ? "--pair-mode ${params.pair_mode}" : '',
-                    params.pair_strategy ? "--pair-strategy ${params.pair_strategy}" : '',
-                    params.templates ? '--templates' : '',
-                    params.recycle_early_stop_tolerance ? "--recycle-early-stop-tolerance ${params.recycle_early_stop_tolerance}" : '',
-                    params.num_ensemble ? "--num-ensemble ${params.num_ensemble}" : '',
-                    params.num_seeds ? "--num-seeds ${params.num_seeds}" : '',
-                    params.random_seed ? "--random-seed ${params.random_seed}" : '',
-                    params.num_models ? "--num-models ${params.num_models}" : '',
-                    params.model_type ? "--model-type ${params.model_type}" : '',
-                    params.use_dropout ? '--use-dropout' : '',
-                    params.max_seq ? "--max-seq ${params.max_seq}" : '',
-                    params.max_extra_seq ? "--max-extra-seq ${params.max_extra_seq}" : '',
-                    params.max_msa ? "--max-msa ${params.max_msa}" : '',
-                    params.disable_cluster_profile ? '--disable-cluster-profile' : '',
-                    params.amber ? '--amber' : '',
-                    params.num_relax ? "--num-relax ${params.num_relax}" : '',
-                    params.relax_max_iterations ? "--relax-max-iterations ${params.relax_max_iterations}" : '',
-                    params.relax_tolerance ? "--relax-tolerance ${params.relax_tolerance}" : '',
-                    params.relax_max_outer_iterations ? "--relax-max-outer-iterations ${params.relax_max_outer_iterations}" : '',
-                    params.use_gpu_relax ? '--use-gpu-relax' : '',
-                    params.rank ? "--rank ${params.rank}" : '',
-                    params.stop_at_score ? "--stop-at-score ${params.stop_at_score}" : '',
-                    params.save_all ? '--save-all' : '',
-                    params.save_recycles ? '--save-recycles' : '',
-                    params.save_single_representations ? '--save-single-representations' : '',
-                    params.save_pair_representations ? '--save-pair-representations' : '',
-                    params.host_url ? "--host-url ${params.host_url}" : '',
-                ].join(' ').trim()}
+                    params.msa_mode ? "--msa-mode ${params.msa_mode}" : null,
+                    params.pair_mode ? "--pair-mode ${params.pair_mode}" : null,
+                    params.pair_strategy ? "--pair-strategy ${params.pair_strategy}" : null,
+                    params.templates ? '--templates' : null,
+                    params.recycle_early_stop_tolerance ? "--recycle-early-stop-tolerance ${params.recycle_early_stop_tolerance}" : null,
+                    params.num_ensemble ? "--num-ensemble ${params.num_ensemble}" : null,
+                    params.num_seeds ? "--num-seeds ${params.num_seeds}" : null,
+                    params.random_seed ? "--random-seed ${params.random_seed}" : null,
+                    params.num_models ? "--num-models ${params.num_models}" : null,
+                    params.model_type ? "--model-type ${params.model_type}" : null,
+                    params.use_dropout ? '--use-dropout' : null,
+                    params.max_seq ? "--max-seq ${params.max_seq}" : null,
+                    params.max_extra_seq ? "--max-extra-seq ${params.max_extra_seq}" : null,
+                    params.max_msa ? "--max-msa ${params.max_msa}" : null,
+                    params.disable_cluster_profile ? '--disable-cluster-profile' : null,
+                    params.amber ? '--amber' : null,
+                    params.num_relax ? "--num-relax ${params.num_relax}" : null,
+                    params.relax_max_iterations ? "--relax-max-iterations ${params.relax_max_iterations}" : null,
+                    params.relax_tolerance ? "--relax-tolerance ${params.relax_tolerance}" : null,
+                    params.relax_max_outer_iterations ? "--relax-max-outer-iterations ${params.relax_max_outer_iterations}" : null,
+                    params.use_gpu_relax ? '--use-gpu-relax' : null,
+                    params.rank ? "--rank ${params.rank}" : null,
+                    params.stop_at_score ? "--stop-at-score ${params.stop_at_score}" : null,
+                    params.save_all ? '--save-all' : null,
+                    params.save_recycles ? '--save-recycles' : null,
+                    params.save_single_representations ? '--save-single-representations' : null,
+                    params.save_pair_representations ? '--save-pair-representations' : null,
+                    params.host_url ? "--host-url ${params.host_url}" : null,
+                ].findAll().join(' ')}
             }
     withName: 'AF3_FOLD' {
                 ext.args = { [
-                    "--max_template_date=${params.max_template_date}",
-                    "--num_recycles=${params.num_recycles}",
-                ].join(' ').trim()}
+                    params.max_template_date ? "--max_template_date=${params.max_template_date}" : null,
+                    params.num_recycles ? "--num_recycles=${params.num_recycles}" : null,
+                    params.conformer_max_iterations ? "--conformer_max_iterations ${params.conformer_max_iterations}" : null,
+                    params.save_distogram ? '--save_distogram' : null,
+                    params.save_embeddings ? '--save_embeddings' : null,
+                ].findAll().join(' ')}
             }
 }
