--- a/nextflow.config
+++ b/nextflow.config
@@ -3,16 +3,16 @@ params {
 
     // Input options
     input                       = null
-    outdir                      = './results'
-    top_rank                    = null
+    outdir                      = null
     mode                        = null // {alphafold3, colabfold}
 
-    // colabfold_batch paramaters
+    // Colabfold mode paramaters
+    top_rank                    = null
     // MSA arguments
     msa_mode = 'mmseqs2_uniref_env'
-    pair_mode = 'unpaired_paired'
-    pair_strategy = 'greedy'
-    templates = false
+    pair_mode = null
+    pair_strategy = null
+    templates = null
 
     // Prediction arguments
     num_recycle = 3
@@ -47,13 +47,16 @@ params {
     // Advanced arguments
     host_url = 'http://cfold-db:8888'
 
-    // Alphafold3 params
+    // Alphafold3 mode paramaters
     model_dir                   = null
     db_dir                      = '/datasets/bio/alphafold3'
     max_template_date           = '2021-09-30'
-    num_recycles                = 10
-    inf_batch                   = 20
-    
+    num_recycles                = 10 // Number of recycles for inference
+    inf_batch                   = 20 // Number of inference jobs to batch per GPU
+    conformer_max_iterations    = null
+    save_distogram              = null
+    save_embeddings             = null
+
 
     // Config options
     config_profile_name         = null
