--- a/conf/base.config
+++ b/conf/base.config
@@ -15,7 +15,7 @@ process {
     time   = { check_max( 2.h  * task.attempt, 'time'   ) }
 
     maxRetries = 2
-    errorStrategy = { task.attempt <= process.maxRetries  ? 'retry' : 'ignore' }
+    errorStrategy = { task.attempt <= process.maxRetries  ? 'retry' : 'terminate' }
 
     withLabel:process_single {
         cpus   = { check_max( 1                  , 'cpus'    ) }
@@ -37,21 +37,14 @@ process {
         memory = { check_max( 100.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 8.h  * task.attempt, 'time'    ) }
     }
-    withLabel:gpu_colabfold {
+    withLabel:gpu {
         // If a process has gpu label submits to gpu queue
         queue = { task.time <= 2.h ? 'gpu-preempt' : 'gpu' }
-        clusterOptions = { "--gpus=1" + " --constraint=${task.attempt == 1 ? 'vram23' : (task.attempt == 2 ? 'vram40' : 'vram80') }" }
-        containerOptions = '--nv'
-
-        cpus   = { check_max( 1                   , 'cpus'    ) }
-        memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 8.h  * task.attempt , 'time'    ) }
-    }
-    withLabel:gpu_af3 {
-        // If a process has gpu label submits to gpu queue
-        queue = { task.time <= 2.h ? 'gpu-preempt' : 'gpu' }
-        // Excludes RTX8000 GPUs because of compute capability < 8
-        clusterOptions = { "--gpus=1" + " --exclude=gypsum-gpu[182,186,188]" + " --constraint=${task.attempt == 1 ? 'vram48' : 'vram80' }" }
+        clusterOptions = clusterOptions = { 
+            def vramConstraint = task.attempt == 1 ? 'vram23' : (task.attempt == 2 ? 'vram40' : 'vram80')
+            def smConstraint = params.mode == 'alphafold3' ? ',sm_80' : (params.mode == 'boltz' ? ',sm_70' : '')
+            return "--gpus=1 --constraint=${vramConstraint}${smConstraint}"
+        }
         containerOptions = '--nv'
 
         cpus   = { check_max( 1                   , 'cpus'    ) }
@@ -65,7 +58,7 @@ process {
         memory = { check_max( 200.GB * task.attempt, 'memory' ) }
     }
     withLabel:error_ignore {
-        errorStrategy = 'ignore'
+        errorStrategy = { task.attempt <= process.maxRetries  ? 'retry' : 'ignore' }
     }
     withLabel:error_retry {
         errorStrategy = 'retry'
