Adds boltz mode.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -41,4 +41,29 @@ process {
                     params.save_embeddings ? '--save_embeddings' : null,
                 ].findAll().join(' ')}
             }
+    withName: 'BOLTZ_PREDICT' {
+                ext.args = { [
+                    params.recycling_steps ? "--recycling_steps=${params.recycling_steps}" : null,
+                    params.sampling_steps ? "--sampling_steps=${params.sampling_steps}" : null,
+                    params.diffusion_samples ? "--diffusion_samples=${params.diffusion_samples}" : null,
+                    params.step_scale ? "--step_scale=${params.step_scale}" : null,
+                    params.write_full_pae ? "--write_full_pae" : null,
+                    params.write_full_pde ? "--write_full_pde" : null,
+                    params.output_format ? "--output_format=${params.output_format}" : null,
+                    params.seed ? "--seed=${params.seed}" : null,
+                    params.use_msa_server ? "--use_msa_server" : null,
+                    params.msa_server_url ? "--msa_server_url=${params.msa_server_url}" : null,
+                    params.msa_pairing_strategy ? "--msa_pairing_strategy=${params.msa_pairing_strategy}" : null,
+                    params.use_potentials ? "--use_potentials" : null,
+                    params.method ? "--method=${params.method}" : null,
+                    params.affinity_mw_correction ? "--affinity_mw_correction" : null,
+                    params.sampling_steps_affinity ? "--sampling_steps_affinity=${params.sampling_steps_affinity}" : null,
+                    params.diffusion_samples_affinity ? "--diffusion_samples_affinity=${params.diffusion_samples_affinity}" : null,
+                    params.max_msa_seqs ? "--max_msa_seqs=${params.max_msa_seqs}" : null,
+                    params.subsample_msa ? "--subsample_msa" : null,
+                    params.num_subsampled_msa ? "--num_subsampled_msa=${params.num_subsampled_msa}" : null,
+                    params.no_kernels ? "--no_kernels" : null,
+                    params.write_embeddings ? "--write_embeddings" : null,
+                ].findAll().join(' ')}
+            }
 }
