--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,7 @@ params {
     // Input options
     input                       = null
     outdir                      = null
-    mode                        = null // {alphafold3, colabfold}
+    mode                        = null // {alphafold3, colabfold, boltz}
 
     // Colabfold mode paramaters
     top_rank                    = null
@@ -45,17 +45,41 @@ params {
     save_pair_representations = null
 
     // Advanced arguments
-    host_url = 'http://cfold-db:8888'
+    inf_batch                   = 20 // Number of inference jobs to batch per GPU (Alphafold3, Boltz)
+    host_url = 'http://cfold-db:8888' // MSAserver (Colabfold, Boltz)
 
     // Alphafold3 mode paramaters
     model_dir                   = null
     db_dir                      = '/datasets/bio/alphafold3'
     max_template_date           = '2021-09-30'
     num_recycles                = 10 // Number of recycles for inference
-    inf_batch                   = 20 // Number of inference jobs to batch per GPU
     conformer_max_iterations    = null
     save_distogram              = null
     save_embeddings             = null
+
+    // Boltz mode paramaters (Provides defaults)
+    model = null // The model to use for prediction. Options: boltz1|boltz2
+    recycling_steps = null // Boltz default: 3, AF3 default:10
+    sampling_steps = null // The number of sampling steps to use for prediction
+    diffusion_samples = null // Boltz default: 1, AF3 default:20
+    step_scale = null // Boltz1: 1.638 Boltz2: 1.5 (null uses default)
+    write_full_pae = null
+    write_full_pde = null
+    output_format = null // Options: pdf|mmcif
+    seed = null // Seed to use for random number generator
+    use_msa_server = true
+    msa_server_url = 'http://cfold-db:8888'
+    msa_pairing_strategy = null // Options: greedy|complete
+    use_potentials = null // Whether to not use potentials for steering.
+    method = null // The method to use for prediction.
+    affinity_mw_correction = null // Whether to add the Molecular Weight correction to the affinity value head
+    sampling_steps_affinity = null // The number of sampling steps to use for affinity prediction
+    diffusion_samples_affinity = null // The number of diffusion samples to use for affinity prediction.
+    max_msa_seqs = null // The maximum number of MSA sequences to use for prediction.
+    subsample_msa = null // Whether to subsample the MSA.
+    num_subsampled_msa = null // The number of MSA sequences to subsample.
+    no_kernels = null // Whether to disable the kernels.
+    write_embeddings = null // to dump the s and z embeddings into a npz file
 
 
     // Config options
@@ -130,7 +154,7 @@ profiles {
         charliecloud.enabled    = false
     }
     debug {
-        clean = false
+        cleanup = false
         process {
             errorStrategy = 'terminate'
         }
