Removes  functions from config files and updates the required nextflowVersion to 24.04.0. Adds an example.config for different clusters

--- a/conf/base.config
+++ b/conf/base.config
@@ -1,7 +1,5 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    nf-core/proteinfold Nextflow base config file
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     A 'blank slate' config file, appropriate for general use on most high performance
     compute environments. Assumes that all software is installed and available on
     the PATH. Runs in `local` mode - all jobs will be run on the logged in environment.
@@ -10,52 +8,52 @@
 
 process {
 
-    cpus   = { check_max( 1    * task.attempt, 'cpus'   ) }
-    memory = { check_max( 6.GB * task.attempt, 'memory' ) }
-    time   = { check_max( 2.h  * task.attempt, 'time'   ) }
+    cpus   = { 1    * task.attempt }
+    memory = { 6.GB * task.attempt }
+    time   = { 2.h  * task.attempt }
 
     maxRetries = 2
     errorStrategy = { task.attempt <= process.maxRetries  ? 'retry' : 'terminate' }
 
     withLabel:process_single {
-        cpus   = { check_max( 1                  , 'cpus'    ) }
-        memory = { check_max( 6.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 2.h  * task.attempt, 'time'    ) }
+        cpus   = { 1                   }
+        memory = { 6.GB * task.attempt }
+        time   = { 2.h  * task.attempt }
     }
     withLabel:process_low {
-        cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 12.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 4.h   * task.attempt, 'time'    ) }
+        cpus   = { 2     * task.attempt }
+        memory = { 12.GB * task.attempt }
+        time   = { 4.h   * task.attempt }
     }
     withLabel:process_medium {
-        cpus   = { check_max( 6     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 36.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 8.h   * task.attempt, 'time'    ) }
+        cpus   = { 6     * task.attempt }
+        memory = { 36.GB * task.attempt }
+        time   = { 8.h   * task.attempt }
     }
     withLabel:process_high {
-        cpus   = { check_max( 10    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 100.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 8.h  * task.attempt, 'time'    ) }
+        cpus   = { 10     * task.attempt }
+        memory = { 100.GB * task.attempt }
+        time   = { 8.h    * task.attempt }
     }
     withLabel:gpu {
         // If a process has gpu label submits to gpu queue
         queue = { task.time <= 2.h ? 'gpu-preempt' : 'gpu' }
-        clusterOptions = clusterOptions = { 
+        clusterOptions = { 
             def vramConstraint = task.attempt == 1 ? 'vram23' : (task.attempt == 2 ? 'vram40' : 'vram80')
             def smConstraint = params.mode == 'alphafold3' ? ',sm_80' : (params.mode == 'boltz' ? ',sm_70' : '')
             return "--gpus=1 --constraint=${vramConstraint}${smConstraint}"
         }
         containerOptions = '--nv'
 
-        cpus   = { check_max( 1                   , 'cpus'    ) }
-        memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 8.h  * task.attempt , 'time'    ) }
+        cpus   = { 1                    }
+        memory = { 30.GB * task.attempt }
+        time   = { 8.h   * task.attempt }
     }
     withLabel:process_long {
-        time   = { check_max( 20.h  * task.attempt, 'time'    ) }
+        time   = { 20.h  * task.attempt }
     }
     withLabel:process_high_memory {
-        memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+        memory = { 200.GB * task.attempt }
     }
     withLabel:error_ignore {
         errorStrategy = { task.attempt <= process.maxRetries  ? 'retry' : 'ignore' }
